# 1m25_19

./: .gitignore  Cargo.toml  README.md  deno.json
.github/workflows/: release.yaml
crates/graph/: Cargo.toml
crates/graph/src/: lib.rs
crates/model/: Cargo.toml
crates/model/src/: graph.rs  lib.rs  user.rs
crates/repository/: Cargo.toml
crates/repository/migrations/: 1_graphs.sql  1_init.sql
crates/repository/src/: graph.rs  lib.rs  user.rs
crates/tauri_app/: Cargo.toml  tauri.conf.json
crates/tauri_app/icons/: icon.icns
crates/tauri_app/src/: commands.rs  lib.rs  main.rs
crates/voice/: Cargo.toml
crates/voice/src/: lib.rs
