[workspace]
resolver = "3"
members = [
  "crates/*",
]

[workspace.package]
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.98"
rand = { version = "0.9.2", default-features = false, features = ["std"] }
serde = "1.0.219"
serde_json = "1.0.142"
specta = "=2.0.0-rc.22"
sqlx = { version = "0.8.6", default-features = false }
tauri = "2.7.0"
tauri-build = "2.3.1"
