[workspace]
resolver = "3"
members = [
  "crates/*",
]

[workspace.package]
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.98"
const_format = "0.2.34"
rand = { version = "0.9.2", default-features = false, features = ["std"] }
serde = "1.0.219"
serde_json = "1.0.142"
specta = "=2.0.0-rc.22"
specta-typescript = "0.0.9"
sqlx = { version = "0.8.6", default-features = false }
tauri = "2.7.0"
tauri-build = "2.3.1"
tauri-specta = "=2.0.0-rc.21"
voicevox_core = { git = "https://github.com/VOICEVOX/voicevox_core", version = "0.0.0"}
