[package]
name = "graph"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
model = { path = "../model" }
rand = { workspace = true, features = ["small_rng", "thread_rng"] }
repository = { path = "../repository" }
sqlx = { workspace = true, features = ["json"] }
