[package]
name = "tauri_app"
version = "0.1.0"
edition.workspace = true

[lib]
name = "tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
anyhow = { workspace = true }
graph = { path = "../graph" }
model = { path = "../model" }
repository = { path = "../repository" }
tauri = { workspace = true }
